Fix browse bookshelf image size on smaller screens

--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -47,6 +47,11 @@
 
 .btn-recommendation {
   float: right;
+
+  @media screen and (max-width: 520px) {
+    float: none;
+    margin-bottom: 10px;
+  }
 }
 
 .modal-content {
